@@ -1,0 +1,45 @@
+
+from zope.interface import Interface, implements
+
+class IAuth(Interface):
+    """Represent an authentication method."""
+
+    def authenticate(self, user, passwd):
+            """Check whether C{user} / C{passwd} are valid."""
+
+    def errmsg(self):
+            """Get the reason authentication failed."""
+
+class AuthBase:
+    err = ""
+
+    def errmsg(self):
+        return self.err
+
+class BasicAuth(AuthBase):
+    implements(IAuth)
+    """Implement basic authentication against a list of user/passwd."""
+
+    userpass = []
+    """List of user/pass tuples."""
+
+    def __init__(self, userpass):
+        """C{userpass} is a list of (user, passwd)."""
+        for item in userpass:
+            assert isinstance(item, tuple)
+            u, p = item
+            assert isinstance(u, str)
+            assert isinstance(p, str)
+        self.userpass = userpass
+
+    def authenticate(self, user, passwd):
+        """Check that C{user}/C{passwd} is a valid user/pass tuple."""
+        if not self.userpass:
+            self.err = "Bad self.userpass data"
+            return False
+        for u, p in self.userpass:
+            if user == u and passwd == p:
+                self.err = ""
+                return True
+        self.err = "Invalid username or password"
+        return False
